--- a/README
+++ b/README
@@ -1,2 +1,10 @@
-Uni assignments
-idfc how you use them
+Uni assignments templates
+
+
+-- Key takeaways:
+
+- idfc how you use them
+- not my problem if you copy paste and get 0/10 for plagiarism
+- use your brain
+- there's no extra context except hte bare minimum
+- these are TEMPLATES do not just fill the content and send it,actually change stuff in the code
