--- a/README
+++ b/README
@@ -6,5 +6,5 @@ Uni assignments templates
 - idfc how you use them
 - not my problem if you copy paste and get 0/10 for plagiarism
 - use your brain
-- there's no extra context except hte bare minimum
+- there's no extra context except the bare minimum
 - these are TEMPLATES do not just fill the content and send it,actually change stuff in the code
